--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,1 @@
-resources/elegance.jpg filter=lfs diff=lfs merge=lfs -text
-resources/richard-wright-haven.jpg filter=lfs diff=lfs merge=lfs -text
-resources/still-alive.jpg filter=lfs diff=lfs merge=lfs -text
+wallpapers/** filter=lfs diff=lfs merge=lfs -text
