--- a/i3/config
+++ b/i3/config
@@ -15,6 +15,9 @@ set $mod Mod1
 exec xsetroot -solid "#222233"
 exec feh --randomize --bg-fill ~/dotfiles/wallpapers/*
 
+# Gnome Keychain
+exec --no-startup-id /usr/lib/gnome-settings-daemon/gnome-settings-daemon
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:monospace 8
