mod+shift+enter is shell, needed alt+enter for pycharm

--- a/i3/config
+++ b/i3/config
@@ -14,6 +14,7 @@ set $mod Mod1
 # Set background / wallpaper
 exec xsetroot -solid "#222233"
 exec feh --randomize --bg-fill ~/dotfiles/wallpapers/*
+exec rescuetime
 
 # Compose key
 exec setxkbmap -option "compose:rwin"
@@ -40,7 +41,7 @@ font pango:DejaVu Sans Mono 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Shift+Return exec i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
