--- a/.i3status.conf
+++ b/.i3status.conf
@@ -7,56 +7,69 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
-        colors = true
-        interval = 5
+    colors = true
+    color_good = "#02e53a"
+    color_degraded = "#e5c602"
+    color_bad = "#e51c02"
+    interval = 5
 }
 
 order += "volume master"
-order += "disk /"
 order += "wireless _first_"
 order += "ethernet _first_"
-order += "cpu_temperature 0"
+order += "path_exists docked"
 order += "battery 0"
+order += "disk /"
+order += "cpu_temperature 0"
 order += "load"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+    format_up = "%essid [%quality %ip]"
+    format_down = "WLAN"
 }
 
 ethernet _first_ {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+    # if you use %speed, i3status requires root privileges
+    format_up = "%ip (%speed)"
+    format_down = "ETH"
 }
 
 battery 0 {
-        format = "%status %percentage %remaining"
-}
+    format = "%status %percentage %remaining"
+    integer_battery_capacity = true
 
-run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
-}
-
-run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
+    status_full = "FULL"
+    status_chr = "CHR"
+    status_bat = "BAT"
+    format_down = "NOBAT"
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+    format = "%Y-%m-%d %H:%M:%S"
 }
 
 load {
-        format = "%1min"
+    format = "%1min"
+}
+
+cpu_temperature 0 {
+    format = "%degreesC"
+    path = "/sys/devices/platform/coretemp.0/hwmon/hwmon1/temp1_input"
 }
 
 disk "/" {
-        format = "%avail"
+    format = "%avail"
 }
 
 volume master {
-        format = "♪ %volume"
-        format_muted = "♪ muted (%volume)"
-        device = "pulse:1"
+    format = "♪ %volume"
+    format_muted = "♪ muted (%volume)"
+    device = "pulse:0"
+}
+
+path_exists docked {
+    path = "/home/will/.docked"
+    format = "DOCK"
+    format_down = "NODOCK"
 }
