--- a/.gitconfig
+++ b/.gitconfig
@@ -70,3 +70,6 @@
   cmd = /usr/local/bin/icdiff --line-numbers $LOCAL $REMOTE
 [gpg]
 	program = gpg2
+[filter "lfs"]
+	smudge = git-lfs smudge --skip %f
+	process = git-lfs filter-process --skip
