--- a/.i3status.conf
+++ b/.i3status.conf
@@ -31,7 +31,7 @@ wireless _first_ {
 
 ethernet _first_ {
     # if you use %speed, i3status requires root privileges
-    format_up = "%ip (%speed)"
+    format_up = "%ip"
     format_down = "ETH"
 }
 
@@ -39,10 +39,10 @@ battery 0 {
     format = "%status %percentage %remaining"
     integer_battery_capacity = true
 
-    status_full = "FULL"
+    status_full = "FUL"
     status_chr = "CHR"
     status_bat = "BAT"
-    format_down = "NOBAT"
+    format_down = "NOB"
 }
 
 tztime local {
@@ -55,7 +55,7 @@ load {
 
 cpu_temperature 0 {
     format = "%degreesC"
-    path = "/sys/devices/platform/coretemp.0/hwmon/hwmon1/temp1_input"
+    path = "/home/will/dotfiles/cputemp"
 }
 
 disk "/" {
@@ -63,8 +63,8 @@ disk "/" {
 }
 
 volume master {
-    format = "♪ %volume"
-    format_muted = "♪ muted (%volume)"
+    format = "VOL %volume"
+    format_muted = "MUTE %volume"
     device = "pulse:0"
 }
 
