zpresto styling and tweaks

--- a/.zpreztorc
+++ b/.zpreztorc
@@ -19,21 +19,19 @@ zstyle ':prezto:*:*' color 'yes'
 zstyle ':prezto:load' pmodule \
   'environment' \
   'terminal' \
-  'editor' \
   'syntax-highlighting' \
   'history' \
   'history-substring-search' \
+  'autosuggestions' \
   'directory' \
   'spectrum' \
   'utility' \
   'completion' \
   'prompt' \
   'git' \
-  'ruby' \
   'node' \
-  'python' \
-  'utility' \
-  'prompt'
+  'python'
+
 #
 # Autosuggestions
 #
@@ -92,7 +90,8 @@ zstyle ':prezto:module:editor' key-bindings 'vi'
 # Set the prompt theme to load.
 # Setting it to 'random' loads a random theme.
 # Auto set to 'off' on dumb terminals.
-zstyle ':prezto:module:prompt' theme 'sorin'
+
+zstyle ':prezto:module:prompt' theme 'wjdp'
 
 #
 # Ruby
@@ -146,7 +145,7 @@ zstyle ':prezto:module:prompt' theme 'sorin'
 zstyle ':prezto:module:terminal' auto-title 'yes'
 
 # Set the window title format.
-# zstyle ':prezto:module:terminal:window-title' format '%n@%m: %s'
+zstyle ':prezto:module:terminal:window-title' format '%n@%m: %s'
 
 # Set the tab title format.
 # zstyle ':prezto:module:terminal:tab-title' format '%m: %s'
