Some changes to comption conf?

--- a/.compton.conf
+++ b/.compton.conf
@@ -2,10 +2,13 @@
 backend = "glx";
 vsync = "opengl-swc";
 
+glx-no-stencil = true;
 glx-copy-from-front = true;
 glx-swap-method = 2;
 xrender-sync = true;
 xrender-sync-fence = true;
+
+shadow = false;
 
 # transparancy settings for i3
 opacity-rule = [
