--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,3 +17,8 @@ set-option -g status-left "#[fg=blue,bright]#(~/bin/screen_gcal   )#[default]"
 
 # 256 colours
 set -g default-terminal "screen-256color"
+
+# Mouse scrolling
+set -g mouse on
+bind m set -g mouse off
+bind M set -g mouse on
