Add NVIDIA prime switching command

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -18,6 +18,7 @@ order += "volume master"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "path_exists docked"
+order += "path_exists prime"
 order += "battery 0"
 order += "disk /"
 order += "cpu_temperature 0"
@@ -71,4 +72,8 @@ volume master {
 path_exists docked {
     path = "/home/will/.docked"
     format = "DOCK"
+}
+path_exists prime {
+    path = "/home/will/.prime"
+    format = "GPU"
 }
