--- a/.i3status.conf
+++ b/.i3status.conf
@@ -22,28 +22,30 @@ order += "path_exists prime"
 order += "battery 0"
 order += "disk /"
 order += "cpu_temperature 0"
+order += "cpu_usage"
 order += "load"
 order += "tztime local"
 
 wireless _first_ {
-    format_up = "%essid [%quality %ip]"
+    format_up = "WLAN %quality"
     format_down = "WLAN"
 }
 
 ethernet _first_ {
     # if you use %speed, i3status requires root privileges
-    format_up = "%ip"
+    format_up = "ETH"
     format_down = "ETH"
 }
 
 battery 0 {
     format = "%status %percentage %remaining"
     integer_battery_capacity = true
+    hide_seconds = true
 
-    status_full = "FUL"
+    status_full = "FULL"
     status_chr = "CHR"
     status_bat = "BAT"
-    format_down = "NOB"
+    format_down = "NOBAT"
 }
 
 tztime local {
@@ -51,7 +53,7 @@ tztime local {
 }
 
 load {
-    format = "%1min"
+    format = "%1min %5min %15min"
 }
 
 cpu_temperature 0 {
