--- a/.gitconfig
+++ b/.gitconfig
@@ -30,6 +30,7 @@
 
   # Logs
   ls = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate
+  chlog = log --pretty=format:"%C(yellow)%h\\ %Creset%s%Cblue\\ [%cn]" --decorate --no-merges master..HEAD
   lss = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=short
   ld = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=relative
   ll = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
