--- a/.i3status.conf
+++ b/.i3status.conf
@@ -17,6 +17,7 @@ general {
 order += "volume master"
 order += "wireless _first_"
 order += "ethernet _first_"
+order += "path_exists VPN"
 order += "path_exists docked"
 order += "path_exists prime"
 order += "battery 0"
@@ -78,4 +79,9 @@ path_exists docked {
 path_exists prime {
     path = "/home/will/.prime"
     format = "GPU"
+}
+
+path_exists VPN {
+    path = "/proc/sys/net/ipv4/conf/tun0"
+    format = "VPN"
 }
