Use default pulse sink
I think?

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -69,7 +69,7 @@ disk "/" {
 volume master {
     format = "VOL %volume"
     format_muted = "MUTE %volume"
-    device = "pulse:0"
+    device = "pulse"
 }
 
 path_exists docked {
