--- a/.gitconfig
+++ b/.gitconfig
@@ -33,7 +33,7 @@
 
   # Logs
   ls = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate
-  chlog = log --pretty=format:"%C(yellow)%h\\ %Creset%s%Cblue\\ [%cn]" --decorate --no-merges origin/master..HEAD
+  chlog ="!git log --pretty=format:\"%C(yellow)%h %Creset%s%Cblue [%cn]\" --decorate --no-merges $(git describe --abbrev=0 --tags)..HEAD"
   lss = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=short
   ld = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=relative
   ll = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
@@ -94,3 +94,5 @@
 	keepBackup = false
 [pull]
 	rebase = true
+[tag]
+	forceSignAnnotated = true
