Lots of bits from 18.04 migration

--- a/.compton.conf
+++ b/.compton.conf
@@ -1,6 +1,6 @@
 # basic configuration
-backend = "glx";
-vsync = "opengl-swc";
+# backend = "glx";
+# vsync = "opengl-swc";
 
 glx-no-stencil = true;
 glx-copy-from-front = true;
