--- a/.gitconfig
+++ b/.gitconfig
@@ -22,6 +22,7 @@
   pish = push
   psuh = push
   pul = pull
+  pushf = push --force-with-lease
 
   po = "!git push --set-upstream origin \"$(git rev-parse --abbrev-ref HEAD)\""
 
@@ -104,3 +105,5 @@
 	rebase = true
 [tag]
 	forceSignAnnotated = true
+[rerere]
+	enabled = true
