From 18.04 install of puttl

--- a/rofi/config
+++ b/rofi/config
@@ -4,8 +4,9 @@
 rofi.combi-modi: window,drun,ssh
 rofi.terminal: gnome-terminal
 rofi.ssh-command: {terminal} -e "zsh -c '{ssh-client} {host}'"
+rofi.separator-style: solid
 
-rofi.color-window: argb:ff002b37, argb:00000000, argb:ffffff
+rofi.color-window: argb:ff002b37, argb:00000000, #668
 rofi.color-normal: #002b37, #ececec, #002b37, #008ed4, #ffffff
 rofi.color-active: #002b37, #008ed4, #002b37, #008ed4, #66c6ff
 rofi.color-urgent: #002b37, #da4281, #002b37, #008ed4, #890661
