--- a/.gitconfig
+++ b/.gitconfig
@@ -107,3 +107,8 @@
 	forceSignAnnotated = true
 [rerere]
 	enabled = true
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
