--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,7 @@
 [core]
   excludesfile = ~/.gitignore_global
   editor = vim
+	pager = diff-so-fancy | less --tabs=4 -RFX
 [push]
   default = simple
 [commit]
@@ -112,3 +113,17 @@
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
+[color]
+	ui = true
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+[color "diff"]
+	meta = yellow
+	frag = magenta bold
+	commit = yellow bold
+	old = red bold
+	new = green bold
+	whitespace = red reverse
