--- a/.gitconfig
+++ b/.gitconfig
@@ -42,6 +42,7 @@
   ss = stash save
 
   # Logs
+  l = log --abbrev-commit
   ls = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate
   chlog ="!git log --pretty=format:\"%C(yellow)%h %Creset%s%Cblue [%cn]\" --decorate --no-merges $(git describe --abbrev=0 --tags)..HEAD"
   lss = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=short
