Tweak clock and eth intervals

--- a/polybar.ini
+++ b/polybar.ini
@@ -283,7 +283,7 @@ ramp-signal-foreground = ${colors.foreground-alt}
 [module/eth]
 type = internal/network
 interface = enp24s0
-interval = 1.0
+interval = 0.3
 
 ;format-connected-underline = #55aa55
 format-connected-prefix = "ETH "
@@ -295,12 +295,12 @@ format-disconnected-prefix-foreground = ${colors.foreground-alt}
 format-disconnected = N/C
 ;format-disconnected = <label-disconnected>
 ;format-disconnected-underline = ${self.format-connected-underline}
-label-disconnected = %ifname% disconnected
+label-disconnected = %ifname% D/C
 ;label-disconnected-foreground = ${colors.foreground-alt}
 
 [module/date]
 type = internal/date
-interval = 5
+interval = 1
 
 date = %Y-%m-%d
 time = %H:%M:%S
