--- a/.compton.conf
+++ b/.compton.conf
@@ -1,12 +1,12 @@
 # basic configuration
-# backend = "glx";
-# vsync = "opengl-swc";
+backend = "glx";
+vsync = "opengl-swc";
 
-glx-no-stencil = true;
-glx-copy-from-front = true;
-glx-swap-method = 2;
-xrender-sync = true;
-xrender-sync-fence = true;
+#glx-no-stencil = true;
+#glx-copy-from-front = true;
+#glx-swap-method = 2;
+#xrender-sync = true;
+#xrender-sync-fence = true;
 
 shadow = false;
 
