--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 wallpapers/** filter=lfs diff=lfs merge=lfs -text
 fonts/** filter=lfs diff=lfs merge=lfs -text
+bin/barista filter=lfs diff=lfs merge=lfs -text
