--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -96,7 +96,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    family: "Fira Code Medium"
+    family: "MesloLGS NF"
 
     # The `style` can be specified to pick a specific face.
     style: Regular
