--- a/.zpreztorc
+++ b/.zpreztorc
@@ -90,7 +90,7 @@ zstyle ':prezto:load' pmodule \
 # Setting it to 'random' loads a random theme.
 # Auto set to 'off' on dumb terminals.
 
-zstyle ':prezto:module:prompt' theme 'wjdp'
+zstyle ':prezto:module:prompt' theme 'powerlevel10k'
 
 #
 # Ruby
