--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 wallpapers/** filter=lfs diff=lfs merge=lfs -text
 fonts/** filter=lfs diff=lfs merge=lfs -text
 bin/barista filter=lfs diff=lfs merge=lfs -text
+bin/kindlegen filter=lfs diff=lfs merge=lfs -text
