Update i3status config

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -11,7 +11,7 @@ general {
     color_good = "#02e53a"
     color_degraded = "#e5c602"
     color_bad = "#e51c02"
-    interval = 5
+    interval = 2
 }
 
 order += "volume master"
@@ -19,23 +19,37 @@ order += "wireless _first_"
 order += "ethernet _first_"
 order += "path_exists VPN"
 order += "path_exists docked"
-order += "path_exists prime"
 order += "battery 0"
 order += "disk /"
-order += "cpu_temperature 0"
 order += "cpu_usage"
+order += "cpu_temperature 0"
+order += "memory"
 order += "load"
 order += "tztime local"
+
+cpu_usage {
+    format = "CPU %usage"
+    separator = false
+    separator_block_width = 6
+}
+
+memory {
+    format = "MEM %percentage_available"
+    threshold_degraded = "4G"
+    threshold_critical = "1G"
+}
 
 wireless _first_ {
     format_up = "WLAN %quality"
     format_down = "WLAN"
+    color_bad = "#444444"
 }
 
 ethernet _first_ {
     # if you use %speed, i3status requires root privileges
     format_up = "ETH"
     format_down = "ETH"
+    color_bad = "#444444"
 }
 
 battery 0 {
@@ -43,7 +57,7 @@ battery 0 {
     integer_battery_capacity = true
     hide_seconds = true
 
-    status_full = "FULL"
+    status_full = "FUL"
     status_chr = "CHR"
     status_bat = "BAT"
     format_down = "NOBAT"
@@ -54,34 +68,39 @@ tztime local {
 }
 
 load {
-    format = "%1min %5min %15min"
+    format = "LAV %1min %5min %15min"
 }
 
 cpu_temperature 0 {
-    format = "%degreesC"
-    path = "/home/will/dotfiles/cputemp"
+    format = "TMP %degreesC"
+    max_threshold = 70
 }
 
 disk "/" {
-    format = "%avail"
+    format = "DSK %avail"
+    prefix_type = "decimal"
 }
 
 volume master {
     format = "VOL %volume"
-    format_muted = "MUTE %volume"
+    format_muted = "MUT %volume"
     device = "pulse"
+    color_degraded = "#444444"
 }
 
 path_exists docked {
     path = "/home/will/.docked"
     format = "DOCK"
+    color_bad = "#444444"
 }
 path_exists prime {
     path = "/home/will/.prime"
     format = "GPU"
+    color_bad = "#444444"
 }
 
 path_exists VPN {
     path = "/proc/sys/net/ipv4/conf/tun0"
     format = "VPN"
+    color_bad = "#444444"
 }
