More i3status tweak

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -11,7 +11,7 @@ general {
     color_good = "#02e53a"
     color_degraded = "#e5c602"
     color_bad = "#e51c02"
-    interval = 2
+    interval = 1
 }
 
 order += "volume master"
@@ -40,9 +40,10 @@ memory {
 }
 
 wireless _first_ {
-    format_up = "WLAN %quality"
-    format_down = "WLAN"
+    format_up = "WLN %quality"
+    format_down = "WLN"
     color_bad = "#444444"
+    format_quality="%02d"
 }
 
 ethernet _first_ {
@@ -90,7 +91,7 @@ volume master {
 
 path_exists docked {
     path = "/home/will/.docked"
-    format = "DOCK"
+    format = "DOK"
     color_bad = "#444444"
 }
 path_exists prime {
