Update from puttl

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -80,6 +80,7 @@ cpu_temperature 0 {
 disk "/" {
     format = "DSK %avail"
     prefix_type = "decimal"
+    low_threshold = 10
 }
 
 volume master {
